--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 :root {
     --header-height: 80px;
-    --background-color: #c9ced6;
-    --primary-color: #7dd3fc;
+    --background-color: #e0f2e9;
+    --button-color: #e4e4e4;
+    --primary-color: #e0f2e9;
     --text-color: #ffffff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{   
     background-color: var(--background-color);
-    padding-top: var(--header-height);
+    padding-top: calc(var(--header-height) + 40px );
     box-sizing: border-box;
     border: 0px;
     margin: 0px;
@@ -15,6 +17,65 @@ body{
 
 .hidden{
     display: none;
+}
+
+/* ~ ~ ~ General Styles ~ ~ ~ */
+.button{
+    border-radius: 5px;
+    border: none;
+    padding: .5rem;
+    font-size: .9rem;
+    background-color: var(--button-color);
+}
+
+.button:hover{
+    background-color: var(--button-color);
+}
+
+
+/*   Book Menu   */
+.pageContent{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: solid 1px red;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* 'X' Button */
+.pageContent > button{
+    align-self: end;
+}
+
+/* Submit book button */
+form{
+    display: flex;
+    flex-direction: column;
+}
+form > button {
+    align-self: center;
+}
+
+/* Each div's label and input' */
+#bookMenu > div > form > div{
+    border: solid 1px blue;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Radio button options */
+.form-radio-buttons{
+    border: solid 1px green;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
