--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 :root {
     --header-height: 80px;
-    --background-color: #e0f2e9;
-    --button-color: #e4e4e4;
-    --primary-color: #e0f2e9;
-    --text-color: #ffffff;
+    --background-color: #f0f0f0;
+    --primary-color: #ffffff;
+    
+    --text-color: #fefcfa;
+    --button-color: #58cc71;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -15,6 +16,11 @@ body{
     margin: 0px;
 }
 
+h1{
+    font-size: 2.1rem;
+    font-weight: 800;
+}
+
 .hidden{
     display: none;
 }
@@ -23,59 +29,17 @@ body{
 .button{
     border-radius: 5px;
     border: none;
-    padding: .5rem;
+    padding: .6rem 1rem;
     font-size: .9rem;
+    font-weight: bold;
     background-color: var(--button-color);
+    transition: .2s ease opacity;
 }
 
 .button:hover{
-    background-color: var(--button-color);
+    opacity: .8;
 }
 
-
-/*   Book Menu   */
-.pageContent{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: solid 1px red;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.button:active{
+    opacity: .7;
 }
-
-/* 'X' Button */
-.pageContent > button{
-    align-self: end;
-}
-
-/* Submit book button */
-form{
-    display: flex;
-    flex-direction: column;
-}
-form > button {
-    align-self: center;
-}
-
-/* Each div's label and input' */
-#bookMenu > div > form > div{
-    border: solid 1px blue;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
-
-/* Radio button options */
-.form-radio-buttons{
-    border: solid 1px green;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-
