--- a/bookMenu.css
+++ b/bookMenu.css
@@ -19,6 +19,13 @@
     justify-content: center;
 }
 
+.pageContent > div > button:hover,
+.bookContainer > button:hover{
+    -webkit-box-shadow: 0px 0px 21px 2px rgba(255,64,64,0.2);
+    -moz-box-shadow: 0px 0px 21px 2px rgba(255,64,64,0.2);
+    box-shadow: 0px 0px 21px 2px rgba(255,64,64,0.2);
+}
+
 /* Submit book button */
 form{
     display: flex;
