--- a/style.css
+++ b/style.css
@@ -33,13 +33,26 @@ h1{
     font-size: .9rem;
     font-weight: bold;
     background-color: var(--button-color);
-    transition: .2s ease opacity;
+    transition: .2s ease box-shadow, .2s ease transform;
+    cursor: pointer;
 }
 
 .button:hover{
-    opacity: .8;
+    -webkit-box-shadow: 0px 0px 35px 17px rgba(88,204,113,0.1);
+    -moz-box-shadow: 0px 0px 35px 17px rgba(88,204,113,0.1);
+    box-shadow: 0px 0px 35px 17px rgba(88,204,113,0.1);
+    transform: scale(1.04)
 }
 
 .button:active{
     opacity: .7;
+}
+
+p,
+h1{
+    margin: 0;
+}
+
+p{
+    font-size: 1.3rem;
 }
